<resources>
    <string name="app_name">Smart BMS app</string>
    <!-- Strings used for fragments for navigation -->

    <string name="action_about">About</string>
    <string name="about_fragment_label">About</string>

    <string name="action_connect">Connect</string>
    <string name="connect_fragment_label">Connect</string>

    <string name="action_settings">Settings</string>
    <string name="settings_fragment_label">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="manual_refresh">Manual refresh</string>
    <string name="refresh">refresh</string>
    <string name="power_off">power_off</string>
    <string name="ota_update">OTA update</string>
    <string name="connect_disconnect">connect_disconnect</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="version_v0_1">Version: v0.1</string>
    <string name="made_by_tim_billiet">Made by Tim Billiet</string>
    <string name="github_com_timbilliet">github.com/TimBilliet</string>
</resources>