<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bmsapp.MainActivity"
    android:id="@+id/main_menu">


    <item
        android:id="@+id/power_off"
        android:icon="@drawable/baseline_power_settings_new_24"
        android:title="@string/power_off"
        app:showAsAction="always" />
    <item
        android:id="@+id/manual_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>